fixed a header spacing issue

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -252,7 +252,7 @@ textarea
   position: relative
   width: 39px
   height: 41px
-  margin: 6px 21px 0 0
+  margin: 6px 19px 0 0
   .trigger
     display: block
     height: 41px
@@ -470,7 +470,7 @@ textarea
 #navigation
   list-style: none outside none
   padding-top: 20px
-  padding-right: 60px
+  padding-right: 0px
   li
     float: left
     margin-right: 30px
